--- a/static/user.html
+++ b/static/user.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Second Chair Login</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Spectral:wght@400;700&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Spectral:wght@400;700&family=Satoshi:wght@400;700&display=swap">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         :root {
             --primary: #1E88E5;
             --primary-dark: #1976D2;
+            --secondary: #4CAF50;
             --danger: #f44336;
+            --warning: #FF9800;
             --gray-100: #f5f5f5;
             --gray-200: #e0e0e0;
+            --gray-300: #bdbdbd;
             --gray-600: #757575;
             --gray-800: #424242;
             --white: #ffffff;
@@ -30,20 +33,49 @@
         h1, h2, h3, h4, h5, h6 {
             font-family: 'Spectral', serif;
         }
-        .container { max-width: 1000px; margin: 0 auto; padding: 20px; }
-        .login-container { display: flex; justify-content: center; align-items: center; min-height: 100vh; background: linear-gradient(135deg, var(--primary), #4CAF50); }
-        .login-box { background: var(--white); padding: 40px; border-radius: 12px; box-shadow: var(--shadow-lg); width: 100%; max-width: 400px; }
-        .login-box h2 { text-align: center; margin-bottom: 30px; color: var(--gray-800); }
+        .container { max-width: 1400px; margin: 0 auto; padding: 20px; }
+        .login-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            background: #000;
+        }
+        .login-box {
+            background: var(--white);
+            padding: 40px;
+            border-radius: 12px;
+            box-shadow: var(--shadow-lg);
+            width: 100%;
+            max-width: 400px;
+        }
+        .login-box h2 {
+            text-align: center;
+            margin-bottom: 30px;
+            font-family: 'Satoshi', sans-serif;
+            font-size: 125%;
+            background: linear-gradient(90deg, rgb(8, 131, 253) 0%, rgb(35, 137, 253) 0%, rgb(140, 209, 251) 100%);
+            -webkit-background-clip: text;
+            color: transparent;
+        }
         .form-group { margin-bottom: 20px; }
         .form-group label { display: block; margin-bottom: 8px; font-weight: 600; color: var(--gray-600); }
         .form-group input { width: 100%; padding: 12px; border: 2px solid var(--gray-200); border-radius: 8px; font-size: 14px; transition: border-color 0.2s; }
         .form-group input:focus { outline: none; border-color: var(--primary); }
-        .form-group select { width: 100%; padding: 24px 12px; border: 2px solid var(--gray-200); border-radius: 8px; font-size: 14px; transition: border-color 0.2s; }
+        .form-group select { width: 100%; padding: 12px; border: 2px solid var(--gray-200); border-radius: 8px; font-size: 14px; transition: border-color 0.2s; }
         .form-group select:focus { outline: none; border-color: var(--primary); }
         .btn { display: inline-block; padding: 12px 24px; background: var(--primary); color: var(--white); border: none; border-radius: 8px; cursor: pointer; font-size: 14px; font-weight: 600; transition: all 0.2s; text-align: center; }
         .btn:hover { background: var(--primary-dark); transform: translateY(-1px); }
-        .btn-danger { background: var(--danger); }
+        .btn.btn-full { width: 100%; }
+        .btn.btn-secondary { background: var(--secondary); }
+        .btn.btn-danger { background: var(--danger); }
+        .btn.btn-warning { background: var(--warning); }
+        .btn.btn-outline { background: transparent; border: 2px solid var(--primary); color: var(--primary); }
+        .btn.btn-outline:hover { background: var(--primary); color: var(--white); }
+        .btn:disabled { opacity: 0.6; cursor: not-allowed; }
         .hidden { display: none !important; }
+        .error { color: var(--danger); font-size: 14px; margin-top: 8px; }
+        .success { color: var(--secondary); font-size: 14px; margin-top: 8px; }
         .header { background: var(--white); padding: 20px; border-radius: 12px; box-shadow: var(--shadow); margin-bottom: 20px; display: flex; justify-content: space-between; align-items: center; }
         .agent-table { width: 100%; }
         .agent-header, .agent-row { display: flex; align-items: center; padding: 8px; }
@@ -102,6 +134,23 @@
             cursor: pointer;
             color: var(--gray-600);
         }
+
+        /* Loading Spinner */
+        .spinner {
+            border: 3px solid var(--gray-200);
+            border-top: 3px solid var(--primary);
+            border-radius: 50%;
+            width: 20px;
+            height: 20px;
+            animation: spin 1s linear infinite;
+            display: inline-block;
+            margin-right: 8px;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
     </style>
 </head>
 <body>
@@ -117,8 +166,11 @@
                     <label for="password">Password</label>
                     <input type="password" id="password" name="password" required>
                 </div>
-                <button type="submit" class="btn btn-full">Login</button>
-                <div id="loginError" class="hidden" style="color: var(--danger); margin-top: 10px;"></div>
+                <button type="submit" class="btn btn-full">
+                    <span id="loginSpinner" class="spinner hidden"></span>
+                    Login
+                </button>
+                <div id="loginError" class="error hidden"></div>
             </form>
         </div>
     </div>
@@ -259,17 +311,31 @@ document.getElementById('createUserForm').addEventListener('submit', handleCreat
 
 async function handleLogin(e){
     e.preventDefault();
+    const spinner = document.getElementById('loginSpinner');
+    const errorDiv = document.getElementById('loginError');
+    spinner.classList.remove('hidden');
+    errorDiv.classList.add('hidden');
+
     const fd = new FormData(e.target);
-    const res = await fetch(`${API_BASE}/token`, {method:'POST', headers:{'Content-Type':'application/x-www-form-urlencoded'}, body:`username=${encodeURIComponent(fd.get('username'))}&password=${encodeURIComponent(fd.get('password'))}`});
-    if(res.ok){
-        const data = await res.json();
-        authToken = data.access_token;
-        localStorage.setItem('rag_auth_token', authToken);
-        await loadUser();
-        showAgentPage();
-    } else {
-        document.getElementById('loginError').textContent = 'Invalid credentials';
-        document.getElementById('loginError').classList.remove('hidden');
+    try{
+        const res = await fetch(`${API_BASE}/token`, {
+            method:'POST',
+            headers:{'Content-Type':'application/x-www-form-urlencoded'},
+            body:`username=${encodeURIComponent(fd.get('username'))}&password=${encodeURIComponent(fd.get('password'))}`
+        });
+        if(res.ok){
+            const data = await res.json();
+            authToken = data.access_token;
+            localStorage.setItem('rag_auth_token', authToken);
+            await loadUser();
+            showAgentPage();
+        } else {
+            showError('loginError', 'Invalid username or password');
+        }
+    } catch(err){
+        showError('loginError', 'Login failed. Please try again.');
+    } finally {
+        spinner.classList.add('hidden');
     }
 }
 
@@ -520,7 +586,10 @@ function logout(){
 
 function showLoginPage(){
     document.getElementById('loginForm').reset();
-    document.getElementById('loginError').classList.add('hidden');
+    const error = document.getElementById('loginError');
+    if(error) error.classList.add('hidden');
+    const spinner = document.getElementById('loginSpinner');
+    if(spinner) spinner.classList.add('hidden');
     document.getElementById('loginPage').classList.remove('hidden');
     document.getElementById('agentPage').classList.add('hidden');
 }
@@ -528,6 +597,16 @@ function showLoginPage(){
 function showAgentPage(){
     document.getElementById('loginPage').classList.add('hidden');
     document.getElementById('agentPage').classList.remove('hidden');
+}
+
+function showError(elementId, message) {
+    const element = document.getElementById(elementId);
+    if (element) {
+        element.textContent = message;
+        element.classList.remove('hidden');
+    } else {
+        alert(message);
+    }
 }
 </script>
 </body>
