--- a/static/admin.html
+++ b/static/admin.html
@@ -1013,6 +1013,10 @@
             document.getElementById('editUserTenant').addEventListener('change', function() {
                 loadAgentsForTenantEdit(this.value);
             });
+
+            document.getElementById('llmProvider').addEventListener('change', function() {
+                loadModels(this.value);
+            });
             
             // Temperature slider
             document.getElementById('temperature').addEventListener('input', function() {
@@ -1489,6 +1493,29 @@
             `;
         }
 
+        async function loadModels(provider) {
+            const select = document.getElementById('llmModel');
+            select.innerHTML = '<option>Loading...</option>';
+            try {
+                const resp = await fetch(`${API_BASE}/llm_models?provider=${provider}`);
+                if (resp.ok) {
+                    const data = await resp.json();
+                    select.innerHTML = '';
+                    data.models.forEach(m => {
+                        const opt = document.createElement('option');
+                        opt.value = m;
+                        opt.textContent = m;
+                        select.appendChild(opt);
+                    });
+                } else {
+                    select.innerHTML = '<option value="">Unavailable</option>';
+                }
+            } catch (err) {
+                console.error('Failed to load models', err);
+                select.innerHTML = '<option value="">Unavailable</option>';
+            }
+        }
+
         // Modal functions
         function showModal(modalId) {
             document.getElementById(modalId).classList.remove('hidden');
@@ -1578,7 +1605,7 @@
 
                 if (response.ok) {
                     const config = await response.json();
-                    populateAgentConfig(tenant, agent, config);
+                    await populateAgentConfig(tenant, agent, config);
                     showModal('agentConfigModal');
                 }
             } catch (error) {
@@ -1586,7 +1613,7 @@
             }
         }
 
-        function populateAgentConfig(tenant, agent, config) {
+        async function populateAgentConfig(tenant, agent, config) {
             document.getElementById('configTenant').value = tenant;
             document.getElementById('configAgent').value = agent;
             document.getElementById('botName').value = config.bot_name || '';
@@ -1598,6 +1625,7 @@
             document.getElementById('widgetMode').value = config.mode || 'inline';
             document.getElementById('autoOpen').checked = config.auto_open || false;
             document.getElementById('llmProvider').value = config.llm_provider || 'openai';
+            await loadModels(document.getElementById('llmProvider').value);
             document.getElementById('llmModel').value = config.llm_model || 'gpt-4o-mini';
             document.getElementById('temperature').value = config.temperature || 0.3;
             document.getElementById('tempValue').textContent = config.temperature || 0.3;
