--- a/static/chat.html
+++ b/static/chat.html
@@ -13,7 +13,7 @@
             font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
             background:var(--gray-100);
             color:var(--gray-800);
-            border:0.5in solid var(--gray-200);
+            border:0.5in solid var(--black);
             box-sizing:border-box;
             font-size:var(--body-font-size);
         }
