--- a/static/user.html
+++ b/static/user.html
@@ -10,7 +10,7 @@
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
             font-family: 'Inter', sans-serif;
-            background: black;
+            background: var(--black);
             color: var(--gray-800);
             line-height: 1.6;
             font-size: var(--body-font-size);
@@ -24,7 +24,7 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background: #000;
+            background: var(--black);
         }
         .login-box {
             background: var(--white);
